--- a/static/style.css
+++ b/static/style.css
@@ -5,3 +5,14 @@ body {
 .not-visible {
     display: none;
 }
+
+.dz {
+    border-style: dashed;
+    border-radius: 5px;
+    border-color: #ddd;
+    transition: .5s;
+}
+
+.dz:hover {
+    background-color: #f5f5f5;
+}
