--- a/static/style.css
+++ b/static/style.css
@@ -16,3 +16,9 @@ body {
 .dz:hover {
     background-color: #f5f5f5;
 }
+
+.avatar-big {
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+}
